# geoinverse

./: .gitignore  .pylintrc  DEVELOPMENT.md  Metode Inversi  Metode Inversi.ipynb  Metode Zohdy 1989.ipynb  inversion.py  pyproject.toml
GIpy/: __init__.py
GeoInvers/: local_approach.py
docs/source/: conf.py  index.rst  usage.rst
examples/: Metode Inversi.ipynb
samples/: ves 1.txt
src/geoinvers/: local_approach.py
src/geoinverse/: local_approach.py
tests/: test_local_approach_functions.py
