[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoinvers"
version = "0.0.0b1"

description = "A simple package for geophysical inversion in python"
authors = [
	{ name="Yusuf Umar Al Hakim", email="yusufumar@student.untan.ac.id" },
]
maintainers = [
    { name="Yusuf Umar Al Hakim", email="yusufumar@student.untan.ac.id" },
]
readme = {file = "README.txt", content-type = "text/markdown"}
license = {file = "LICENSE.txt"}
keywords = ["geophysics", "inversion", "scientific", "engineering", "research"]
requires-python = ">=3.8"
classifiers = [
	"Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
]
dependencies = [
    "numpy"
]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov"
]
lint = [
  "black",
  "flake8"
]
docs = ["sphinx", "pydata_sphinx_theme"]
dev = [
    "build",
    "twine"
]

[project.urls]
Source = "https://github.com/vysf/geoinvers"